# social-club-backend

./: api_tester.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_profilepicture.py  0002_customuser_gender_customuser_interests_and_more.py  0003_alter_customuser_profilepicture.py  0003_customuser_user.py  0004_alter_customuser_profilepicture.py  0004_friendrequest.py  0005_rename_friendrequest_follow.py  0006_alter_customuser_interests.py  0007_alter_follow_from_user.py  0008_alter_follow_from_user.py  0009_alter_follow_from_user.py
chat/: models.py  permissions.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
config/: .env  settings.py  urls.py
events/: models.py  permissions.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_eventstarttime.py  0003_alter_event_eventparticipants.py  0004_alter_event_eventparticipants.py  0005_alter_event_eventparticipants.py
